# Spotify-Wrapped-365

./: .cache-frostscope  .env.example  .gitignore  DockerQuick.bat  Dockerfile  README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
