[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
spotipy = "^2.19.0"
gspread = "^5.4.0"
pandas = "^1.4.2"
python-dotenv = "^0.20.0"
requests = "^2.28.0"
Flask = "^2.1.2"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"